; ModuleID = '/home/carl/AnghaBench/linux/net/mac80211/extr_rc80211_minstrel_ht.c_minstrel_ht_avg_ampdu_len.c'
source_filename = "/home/carl/AnghaBench/linux/net/mac80211/extr_rc80211_minstrel_ht.c_minstrel_ht_avg_ampdu_len.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.minstrel_ht_sta = type { i32 }

@AVG_AMPDU_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.minstrel_ht_sta*)* @minstrel_ht_avg_ampdu_len to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @minstrel_ht_avg_ampdu_len(%struct.minstrel_ht_sta* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.minstrel_ht_sta*, align 8
  store %struct.minstrel_ht_sta* %0, %struct.minstrel_ht_sta** %3, align 8
  %4 = load %struct.minstrel_ht_sta*, %struct.minstrel_ht_sta** %3, align 8
  %5 = getelementptr inbounds %struct.minstrel_ht_sta, %struct.minstrel_ht_sta* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %10, label %8

8:                                                ; preds = %1
  %9 = load i32, i32* @AVG_AMPDU_SIZE, align 4
  store i32 %9, i32* %2, align 4
  br label %15

10:                                               ; preds = %1
  %11 = load %struct.minstrel_ht_sta*, %struct.minstrel_ht_sta** %3, align 8
  %12 = getelementptr inbounds %struct.minstrel_ht_sta, %struct.minstrel_ht_sta* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @MINSTREL_TRUNC(i32 %13)
  store i32 %14, i32* %2, align 4
  br label %15

15:                                               ; preds = %10, %8
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i32 @MINSTREL_TRUNC(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
